fix: DES-487 made trap a visible-oin-focus closing button; add main.js to package.json; remove empty mixins.scss

--- a/src/scss/drawer.scss
+++ b/src/scss/drawer.scss
@@ -1,49 +1,63 @@
 .o-drawer {
-	position: fixed;
-	background-color: $o-drawer-bg;
-	box-shadow: -1px 0px 8px rgba(0, 0, 0, 0.3);
-	overflow-x: hidden;
-	overflow-y: auto;
-	height: 100%;
-	width: $o-drawer-width;
-	z-index: $o-drawer-z-index;
-	&.o-drawer-animated {
-		transition: left 0.4s ease, right 0.4s ease;
-	}
-	&.o-drawer-left,
-	&.o-drawer-right {
-		top: 0px;
-	}
-	&.o-drawer-right {
-		right: $o-drawer-width * -1;
-		&.o-drawer-open {
-			right: 0px;
-		}
-	}
-	&.o-drawer-left {
-		left: $o-drawer-width * -1;
-		&.o-drawer-open {
-			left: 0px;
-		}
-	}
-	.pe-trap {
-		/* take up no room */
-		width: 0;
-		height: 0;
-		padding: 0;
-		/* and hide but focusable */
-		opacity: 0;
-	}
+  position: fixed;
+  height: 100%;
+  width: $o-drawer-width;
+  padding: $o-drawer-padding;
+  box-sizing: border-box;
+  background-color: $o-drawer-bg;
+  box-shadow: -1px 0px 8px rgba(0, 0, 0, 0.3);
+  overflow-x: hidden;
+  overflow-y: auto;
+  z-index: $o-drawer-z-index;
+
+  &.o-drawer-animated {
+    transition: left 0.4s ease, right 0.4s ease;
+  }
+
+  &.o-drawer-left,
+  &.o-drawer-right {
+    top: 0px;
+  }
+
+  &.o-drawer-right {
+    right: $o-drawer-width * -1;
+
+    &.o-drawer-open {
+      right: 0px;
+    }
+  }
+  &.o-drawer-left {
+    left: $o-drawer-width * -1;
+
+    &.o-drawer-open {
+      left: 0px;
+    }
+  }
+  .pe-trap {
+    position: absolute;
+    bottom: 5px;
+    right: 30px;
+    padding: 5px;
+    color: #047a9c;
+    border: 0;
+    background-color: transparent;
+    opacity: 0;
+  }
+      .pe-trap:focus {
+        opacity: 1;
+      }
 }
 @media only screen and (max-width: 415px) {
-	.o-drawer {
-		width: 100%;
-		z-index: $o-drawer-z-index;
-		&.o-drawer-right {
-			right: -100%;
-		}
-		&.o-drawer-left {
-			left: -100%;
-		}
-	}
+  .o-drawer {
+    width: 100%;
+    z-index: $o-drawer-z-index;
+
+    &.o-drawer-right {
+      right: -100%;
+    }
+
+    &.o-drawer-left {
+      left: -100%;
+    }
+  }
 }
